--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="search-section">
-        <p class='count'>Number of List<span class='counter'>1</span></p>
+        <p class='count'>Lists<span class='counter'>1</span></p>
 
         <input type='text' class='search' placeholder="Search here">
       </div>
